--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Recipe Box</title>
+    <link href="https://fonts.googleapis.com/css?family=Athiti" rel="stylesheet">
   </head>
   <body>
     <div id="main"></div>
